# cargo-recursive-clean

./: Cargo.toml  README.md
src/: arg_parser.rs  main.rs
