[package]
name = "cargo-recursive-clean"
version = "0.1.7"
edition = "2021"
authors = ["OLoKo64 <reinaldorozatoj.11cg1@aleeas.com>"]
description = "A CLI app that cleans all Rust projects recursively given a base directory."
categories = ["command-line-utilities"]
keywords = ["cargo", "clean", "recursive"]
repository = "https://github.com/OLoKo64/cargo-recursive-clean"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
globwalk = "0.8.1"
itertools = "0.10.5"
owo-colors = "3.5.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread", "process"] }
